// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render when given all the props 1`] = `
<div
  className="f1rvdz2f"
>
  <div
    className="f1ml0oyj"
  >
    <div />
    <div
      className="f107ja4p"
      role="tablist"
    >
      <a
        className="cf-link f1qnym2h"
        href="#!"
        id="card-0-drawer-one"
        onClick={[Function]}
        role="tab"
      >
        One
      </a>
      <a
        className="cf-link fssm709"
        href="#!"
        id="card-0-drawer-two"
        onClick={[Function]}
        role="tab"
      >
        Two
      </a>
    </div>
  </div>
  <div
    active="one"
    className="fuhlm2"
  >
    <div
      className="fbqsgun"
      id={undefined}
      isActive={true}
      onClick={undefined}
    >
      One Content
    </div>
    <div
      className="f1g5f8m1"
      id={undefined}
      isActive={false}
      onClick={undefined}
    />
  </div>
</div>
`;

exports[`should render when given all the props 2`] = `
"
.f1rvdz2f:first-child {
  border-top: initial
}

.f1rvdz2f {
  display: table;
  table-layout: fixed;
  width: 100%;
  border-top: 1px solid #dedede;
  border-left: initial
}

.f1ml0oyj:first-child {
  border-top: initial
}

.f1ml0oyj::after {
  content: '';
  display: table;
  clear: both
}

.f1ml0oyj {
  border-top: 1px solid #dedede;
  min-height: 2.96666rem
}

.f107ja4p {
  float: right
}

.f1qnym2h::after {
  content: '\\\\f003';
  font-family: \\"cloudflare-font\\";
  font-style: normal;
  font-weight: normal;
  margin-top: -0.7em;
  position: absolute;
  top: 60%;
  right: 1rem;
  transition: -webkit-transform 0.2s ease,transform 0.2s ease;
  -webkit-transition: -webkit-transform 0.2s ease,transform 0.2s ease;
  -moz-transition: transform 0.2s ease;
  transform: rotate(90deg);
  -webkit-transform: rotate(90deg)
}

.f1qnym2h {
  position: relative;
  display: inline-block;
  padding: 0.73333rem 2em 0.73333rem 0.5rem
}

.fssm709::after {
  content: '\\\\f003';
  font-family: \\"cloudflare-font\\";
  font-style: normal;
  font-weight: normal;
  margin-top: -0.7em;
  position: absolute;
  top: 60%;
  right: 1rem;
  transition: -webkit-transform 0.2s ease,transform 0.2s ease;
  -webkit-transition: -webkit-transform 0.2s ease,transform 0.2s ease;
  -moz-transition: transform 0.2s ease;
  transform: initial;
  -webkit-transform: initial
}

.fssm709 {
  position: relative;
  display: inline-block;
  padding: 0.73333rem 2em 0.73333rem 0.5rem
}

.fuhlm2 {
  display: block
}

.fbqsgun {
  border-top: 1px solid #dedede;
  padding: 1.5rem
}

.f1g5f8m1 {
  border-top: initial;
  padding: initial
}
"
`;

exports[`should render when not given props 1`] = `
<div
  className="f1rvdz2f"
>
  <div
    className="f1ml0oyj"
  >
    <div />
    <div
      className="f107ja4p"
      role="tablist"
    >
      <a
        className="cf-link fssm709"
        href="#!"
        id="card-1-drawer-one"
        onClick={[Function]}
        role="tab"
      >
        One
      </a>
      <a
        className="cf-link fssm709"
        href="#!"
        id="card-1-drawer-two"
        onClick={[Function]}
        role="tab"
      >
        Two
      </a>
    </div>
  </div>
  <div
    active={undefined}
    className="f1u9fru1"
  >
    <div
      className="f1g5f8m1"
      id={undefined}
      isActive={false}
      onClick={undefined}
    />
    <div
      className="f1g5f8m1"
      id={undefined}
      isActive={false}
      onClick={undefined}
    />
  </div>
</div>
`;

exports[`should render when not given props 2`] = `
"
.f1rvdz2f:first-child {
  border-top: initial
}

.f1rvdz2f {
  display: table;
  table-layout: fixed;
  width: 100%;
  border-top: 1px solid #dedede;
  border-left: initial
}

.f1ml0oyj:first-child {
  border-top: initial
}

.f1ml0oyj::after {
  content: '';
  display: table;
  clear: both
}

.f1ml0oyj {
  border-top: 1px solid #dedede;
  min-height: 2.96666rem
}

.f107ja4p {
  float: right
}

.fssm709::after {
  content: '\\\\f003';
  font-family: \\"cloudflare-font\\";
  font-style: normal;
  font-weight: normal;
  margin-top: -0.7em;
  position: absolute;
  top: 60%;
  right: 1rem;
  transition: -webkit-transform 0.2s ease,transform 0.2s ease;
  -webkit-transition: -webkit-transform 0.2s ease,transform 0.2s ease;
  -moz-transition: transform 0.2s ease;
  transform: initial;
  -webkit-transform: initial
}

.fssm709 {
  position: relative;
  display: inline-block;
  padding: 0.73333rem 2em 0.73333rem 0.5rem
}

.f1u9fru1 {
  display: none
}

.f1g5f8m1 {
  border-top: initial;
  padding: initial
}
"
`;
